# IRL-1

./: CMakeLists.txt  README.md  manifest.xml  package.xml
docs/: INSTALL.md  README.md  USAGE.md
gazebo/: gazebo.urdf.xacro
include/irl_can_ros_ctrl/: irl_robot.hpp  pic_drive.hpp  rc_device.hpp  rc_device_factory.hpp  uni_drive_v2.hpp  uni_drive_v3.hpp
irl_can_bus/: CMakeLists.txt
irl_can_bus/include/irl_can_bus/: can_manager.hpp  can_robot.hpp  can_robot_device.hpp  can_tools.hpp
irl_can_bus/src/: can_manager.cpp  can_robot.cpp  can_tools.cpp  uni_drive_proto.cpp
irl_can_ros_ctrl/: README
irl_can_ros_ctrl/launch/: az2_ctrl.launch  ermasa_ctrl.launch  test_ermasa.launch  test_jn0.launch  valgrind_jn0.launch
irl_can_ros_ctrl/src/: irl_robot_node.cpp  rc_device_factory.cpp  uni_drive_v2.cpp
irl_can_ros_ctrl/srv/: SetAdmittance.srv
irl_common_description/: mainpage.dox
jn0_description/: manifest.xml
jn0_description/robots/: upload_jn0_full.launch
launch/: callgrind_jn0.launch  ermasa_ctrl.launch  test_az2.launch  test_ermasa.launch  test_jn0.launch
robots/: Johnny_0.urdf.xacro  azimut_2.urdf.xacro  azimut_3.urdf.xacro  jn0_full.urdf.xacro  jn0_standalone.urdf.xacro  johnny_0.urdf.xacro  junior.urdf.xacro  reddy.urdf.xacro  upload_Johnny_0.launch  upload_azimut_2.launch  upload_azimut_3.launch  upload_johnny_0.launch  upload_junior.launch
src/: irl_robot.cpp  irl_robot_node.cpp  pic_drive.cpp  proto.cpp  rc_device.cpp  uni_drive_v2.cpp  uni_drive_v3.cpp
tooling/: README.md
urdf/: Color  common.xacro  common_geometry.xacro
(+287 files in other folders)
